# conversational-ai-testing

./: .gitignore  environment.yml  pyproject.toml
config/: config_customer_service.yml  config_default.yml  config_default_anthropic.yml
examples/airline/input/tools/: agent_tools.py
examples/customer_service/input/: call_agent_prompt.md
examples/customer_service/input/data/: accounts.csv  cards.csv  customers.csv  loan_payments.csv  loans.csv  support_tickets.csv  transactions.csv
examples/customer_service/input/tools/: agent_tools.py  get_account_details.py  get_card_details.py  get_customer_accounts.py  get_customer_details.py  get_loan_details.py  get_transactions.py  transfer_to_human_agents.py  update_card_status.py  util.py
examples/customer_service/input/validators/: data_validators.py
simulator/: simulator_executor.py
simulator/dataset/: descriptor_generator.py  events_generator.py
simulator/visualization/: Simulator_Visualizer.py
simulator/visualization/.streamlit/: config.toml
simulator/visualization/pages/: 1_Experiments_Report.py  2_Session_Visualizer.py
